# chess

./: CMakeLists.txt
include/: chess.h
include/chess/: Board.h  BoardUpdater.h  GameStatus.h  KingThreatChecker.h  Move.h  MoveGenerator.h  MoveValidator.h  NotationInterpreter.h  Piece.h  Point.h  Position.h  Tile.h
include/chess/board/: Board.h  BoardUpdater.h  Piece.h  Tile.h
include/chess/move/: Move.h  MoveFinder.h  MoveGenerator.h  MoveValidator.h
include/chess/status/: GameStatus.h  History.h  KingThreatChecker.h
src/: Board.cpp  BoardUpdater.cpp  GameStatus.cpp  KingThreatChecker.cpp  Move.cpp  MoveGenerator.cpp  MoveValidator.cpp  NotationInterpreter.cpp  Piece.cpp  Point.cpp  Position.cpp  Tile.cpp  chess.cpp
src/board/: Board.cpp  BoardUpdater.cpp  Piece.cpp  Point.cpp  Tile.cpp
src/move/: Move.cpp  MoveFinder.cpp  MoveGenerator.cpp  MoveValidator.cpp
src/status/: GameStatus.cpp  History.cpp  KingThreatChecker.cpp
test/: CMakeLists.txt  test.cpp
